# azap

./: Cargo.toml  LICENSE
azap/: Cargo.toml
azap/src/: lib.rs  prelude.rs
azap_codegen/: Cargo.toml
azap_codegen/src/: lib.rs  router.rs
azap_codegen/src/gaurds/: mod.rs  parser.rs
azap_core/: Cargo.toml
azap_macros/: Cargo.toml
azap_macros/src/: guards.rs  lib.rs  route.rs
azap_macros/src/guards/: guard.rs  register.rs
examples/basic/: Cargo.toml  build.rs
examples/basic/src/: main.rs  routes.rs
examples/basic/src/guards/: auth.rs  tracing.rs
examples/basic/src/routes/: health.rs
examples/basic/src/routes/auth/: login.rs  register.rs
examples/basic/src/routes/users/: create.rs  get.rs
